ajusto Model y Repository